--- a/IOSOHF15App/Base.lproj/Main.storyboard
+++ b/IOSOHF15App/Base.lproj/Main.storyboard
@@ -92,7 +92,6 @@
         <!--Main View Controller-->
         <scene sceneID="y2E-xD-VUo">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="AYg-oe-FNG" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="gAZ-Gp-fNJ" customClass="MainViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="7ku-U3-CCE"/>
@@ -108,6 +107,7 @@
                         <segue destination="35F-SR-vIs" kind="custom" identifier="leftMenu" customClass="AMSlideMenuLeftMenuSegue" id="wYe-Ru-yV9"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AYg-oe-FNG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-112" y="172"/>
         </scene>
@@ -171,10 +171,67 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="W85-Yl-qRZ" kind="presentation" identifier="typeSelectionSegue" id="yiI-ac-57E"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZWM-CK-fQT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2500" y="-628"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="zGM-Mq-aRe">
+            <objects>
+                <tableViewController id="AB8-re-uVK" customClass="TypeSelectionTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="7pf-Wg-taQ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TypeTableViewCell" textLabel="HKf-sW-d2a" style="IBUITableViewCellStyleDefault" id="iKj-U7-iMA">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iKj-U7-iMA" id="WbI-ej-jm1">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HKf-sW-d2a">
+                                            <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="AB8-re-uVK" id="Cxi-Bj-i8r"/>
+                            <outlet property="delegate" destination="AB8-re-uVK" id="Dk6-la-5tH"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="KnG-zg-PtN"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eE4-ez-7Bo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3268" y="463"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="oh1-LX-WcN">
+            <objects>
+                <navigationController id="W85-Yl-qRZ" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kD6-Ie-gcN">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="AB8-re-uVK" kind="relationship" relationship="rootViewController" id="UgK-JO-FTq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="njL-aR-grf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2448" y="463"/>
         </scene>
     </scenes>
 </document>
