User location os now shown

--- a/IOSOHF15App/Base.lproj/Main.storyboard
+++ b/IOSOHF15App/Base.lproj/Main.storyboard
@@ -139,7 +139,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Fkc-ce-m11">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fkc-ce-m11">
                                 <rect key="frame" x="0.0" y="63" width="600" height="537"/>
                             </mapView>
                         </subviews>
